[gd_scene load_steps=10 format=3 uid="uid://ddkvy4ljpgwn5"]

[ext_resource type="Script" path="res://Scripts/start_screen.gd" id="1_an2ey"]
[ext_resource type="Texture2D" uid="uid://di0jdteh84ti2" path="res://Images/start.png" id="2_kby43"]
[ext_resource type="Texture2D" uid="uid://c842h3v0pep8u" path="res://Images/start_select.png" id="3_dsvej"]
[ext_resource type="Texture2D" uid="uid://bi8vobux0oje5" path="res://Images/settings.png" id="4_rsi17"]
[ext_resource type="Texture2D" uid="uid://ca8ex7vm5sl34" path="res://Images/settings_select.png" id="5_0du2a"]
[ext_resource type="Texture2D" uid="uid://cauls2o72vdlo" path="res://Images/credits.png" id="6_dabh8"]
[ext_resource type="Texture2D" uid="uid://kl624iok4jyi" path="res://Images/credits_select.png" id="7_q1fyo"]
[ext_resource type="Texture2D" uid="uid://cahuxjkviwv6r" path="res://Images/quit.png" id="8_rcy7s"]
[ext_resource type="Texture2D" uid="uid://crhctcq2lb1bm" path="res://Images/quit_select.png" id="9_3h0gx"]

[node name="Start Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_an2ey")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundImage" type="ColorRect" parent="CanvasLayer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainerButtons" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 1.0
offset_right = 349.0
offset_bottom = 92.0
grow_vertical = 2
scale = Vector2(0.9, 0.9)
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 300
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainerButtons"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ButtonStart" type="TextureButton" parent="CanvasLayer/MarginContainerButtons/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_kby43")
texture_pressed = ExtResource("3_dsvej")
texture_hover = ExtResource("3_dsvej")

[node name="ButtonSettings" type="TextureButton" parent="CanvasLayer/MarginContainerButtons/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_rsi17")
texture_pressed = ExtResource("5_0du2a")
texture_hover = ExtResource("5_0du2a")

[node name="ButtonCredits" type="TextureButton" parent="CanvasLayer/MarginContainerButtons/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_dabh8")
texture_pressed = ExtResource("7_q1fyo")
texture_hover = ExtResource("7_q1fyo")

[node name="ButtonQuit" type="TextureButton" parent="CanvasLayer/MarginContainerButtons/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_rcy7s")
texture_pressed = ExtResource("9_3h0gx")
texture_hover = ExtResource("9_3h0gx")

[connection signal="pressed" from="CanvasLayer/MarginContainerButtons/VBoxContainer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainerButtons/VBoxContainer/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainerButtons/VBoxContainer/ButtonCredits" to="." method="_on_button_credits_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainerButtons/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
